Fix build break which caused by missing isBlank() symbol